# robotics-1

./: .gitignore  README.md
assignments/sprint1/: CMakeLists.txt  LICENSE  package.xml
assignments/sprint1/launch/: spawn_turtlebot3.launch.py  test_world.launch.py
assignments/sprint1/rviz/: test_config.rviz
assignments/sprint1/src/: examplenode.cpp  examplenode.h  main.cpp  simplelaser.cpp  simplelaser.h
assignments/sprint1/worlds/: test_world.world
assignments/sprint1/worlds/assets/test_chair/: model.config
assignments/sprint1/worlds/assets/test_desk/test_desk/: model.sdf
assignments/sprint2/: CMakeLists.txt  package.xml
assignments/sprint2/config/: mapper_params_online_async.yaml  my_ma_mapper_params.yaml  nav2_params.yaml
assignments/sprint2/launch/: sprint_2_world.launch.py  test_world.launch.py
assignments/sprint2/map/: my_ma.pgm  test_map.data  test_map.posegraph  test_map_serial.pgm  test_map_serial.yaml
assignments/sprint2/rviz/: test_config.rviz
assignments/sprint2/src/: examplenode.cpp  simplelaser.cpp
assignments/sprint2/worlds/assets/test_building/: model.config  model.sdf
assignments/sprint2/worlds/assets/test_chair/: model.sdf
assignments/sprint2/worlds/assets/test_desk/test_desk/: model.config
assignments/sprint3/: CMakeLists.txt  package.xml
assignments/sprint3/config/: my_ma_mapper_params.yaml
assignments/sprint3/docs/: Doxyfile
assignments/sprint3/launch/: test_world.launch.py
assignments/sprint3/map/: my_ma.pgm:Zone.Identifier  my_ma.yaml  my_ma.yaml:Zone.Identifier
assignments/sprint3/src/: index.dox  main.cpp  simplelaser.cpp
extras/circle_remove/: CMakeLists.txt  package.xml
extras/circle_remove/src/: circle_remove.cpp  circle_remove.h  main.cpp
extras/path_finding/: CMakeLists.txt  package.xml
extras/path_finding/config/: mapper_params_online_async.yaml  my_ma_mapper_params.yaml  sprint_3_world.yaml
extras/path_finding/launch/: pathfinder.py
extras/path_finding/map/: test_map.pgm  test_map.yaml
extras/path_finding/rviz/: test_config.rviz
extras/path_finding/src/: main.cpp  pathfinder.cpp  pathfinder.h  placeholder.cpp  placeholder.h
extras/slam/: CMakeLists.txt  package.xml
extras/slam/src/: main.cpp  slam.cpp  slam.h
labs/lab1/: CMakeLists.txt  package.xml
labs/lab1/src/: imageconverter.cpp
labs/lab2/: CMakeLists.txt  package.xml
labs/lab2/src/: main.cpp  perception.cpp  perception.h
labs/lab4/: CMakeLists.txt  package.xml  readme.txt
labs/lab4/src/: main.cpp  simpledrive.cpp  simpledrive.h
labs/lab5/: CMakeLists.txt  package.xml
labs/lab5/config/: mapper_params_online_async.yaml
labs/lab5/launch/: lab5.launch.py
labs/lab5/src/: main.cpp  scan2image.cpp  scan2image.h
labs/week1/: CMakeLists.txt  package.xml
labs/week1/src/: imageconverter.h  main.cpp
